Guess my number app, completed

--- a/GuessNumber/app/src/main/res/values/strings.xml
+++ b/GuessNumber/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="str_arrow_up_desc">press_arrow_down</string>
     <string name="str_arrow_down_desc">press arrow down</string>
     <string name="str_arrow_success_desc">App has guessed the number</string>
+    <string name="str_question">Is your number %d?</string>
+    <string name="str_success">Your Number Is %d</string>
 </resources>
