using base adapter to create a custom adapter

--- a/NumberListApp/app/src/main/res/values/strings.xml
+++ b/NumberListApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NumberListApp</string>
+    <string name="image_view_desc">play audio</string>
 </resources>
